<resources>
    <string name="app_name">cgpa</string>
    <string name="button_name1">ADD THEORY</string>
    <string name="button_name2">DELETE</string>
    <string name="button_name3">VIEW</string>
    <string name="button_name4">ADD LAB</string>
    <string name="button_name5">RECORD</string>
    <string name="button_name6">CALCULATOR</string>
    <string name="editText1_text">Enter Course Number</string>
    <string name="editText2_text">Enter Course Credit</string>
    <string name="textView1_text">Quiz_1 :</string>
    <string name="textView2_text">Quiz_2 :</string>
    <string name="textView3_text">Quiz_3 :</string>
    <string name="textView4_text">Quiz_4 :</string>
    <string name="textView5_text">Quiz (average) :</string>
    <string name="textView6_text">Attendance :</string>
    <string name="textView7_text">Final :</string>
    <string name="textView8_text">Total</string>
    <string name="textView9_text">Save</string>
    <string name="textView10_text">Clear</string>
    <string name="textView11_text">Till Mid</string>
    <string name="textView12_text">After Mid</string>

</resources>
