<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:background="@drawable/image2"
    tools:context=".AddCse2203Activity">

    <TextView
        android:id="@+id/cse2203Text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="Cse 2203"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView1_text"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/add_button1_quiz1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView2_text"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/add_button1_quiz2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:inputType="numberDecimal"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView3_text"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/add_button1_quiz3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView4_text"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/add_button1_quiz4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_button1_ok"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:text="OK" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textView5_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_button1_quiz_average"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView6_text"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/add_button1_attendance"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/textView7_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_button1_final"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_button1_done"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="40dp"
            android:text="@string/textView8_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_button1_total"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button3_clear"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/textView10_text"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_button_view"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="1dp"
            android:text="@string/button_name3"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_button4_save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView9_text"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>