<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image3"
    tools:context=".AddLabCse2202Activity">

    <TextView
        android:id="@+id/cse2202Text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:text="Cse 2202"
        android:textSize="20sp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/textView11_text"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add2_info1"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/textView12_text"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add2_info2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_button1_done2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#110202"
            android:text="@string/textView8_text"
            android:textColor="#FFFF"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_total1"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/add2_save2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#110202"
        android:text="SHOW"
        android:textColor="#FFFF"
        android:textSize="25dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/add2_save3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#110202"
        android:text="View"
        android:textColor="#FFFF"
        android:textSize="25dp"
        android:textStyle="bold" />

</LinearLayout>